--- a/index.html
+++ b/index.html
@@ -190,6 +190,46 @@
 
         </div>
 
+        <div class="about portfolio">
+          <h2 class="title2">Portfolio</h2>
+
+          <div class="card_container">
+            <div class="card" style="width: 18rem;">
+              <img src="/assets/img/Cuppon.PNG" class="card-img-top" alt="Cuppon">
+              <div class="card-body">
+                <p class="card-text">Ejercicio Desafío Latam, página de sistema de cupones de descuento.</p>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img src="/assets/img/Landing.PNG" class="card-img-top" alt="Cuppon">
+              <div class="card-body">
+                <p class="card-text">Landing Page de empresa OneERP. Sistem ERP y CRM de la compañía.</p>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img src="/assets/img/IguanaPage.png" class="card-img-top" alt="Cuppon">
+              <div class="card-body">
+                <p class="card-text">Página de ejercicio "Iguana Page" de Desafío Latam.</p>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img src="/assets/img/CV2.png" class="card-img-top" alt="Cuppon">
+              <div class="card-body">
+                <p class="card-text">Página de ejercicio "Agencia de turismo Oscar Garin en Pucón, Desafío Latam".</p>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img src="/assets/img/CV1.PNG" class="card-img-top" alt="Cuppon">
+              <div class="card-body">
+                <p class="card-text">Primer ejercicio de HTML/CSS de un CV con página de Portfolio, Desafío Latam.</p>
+              </div>
+            </div>
+
+          </div>
+
+
+        </div>
+
         <div class="about skills">
           <h2 class="title2">Habilidades</h2>
           <div class="box">
@@ -220,7 +260,7 @@
             </div>
           </div>
 
-          <div class="box"></div>
+          <div class="box">
             <h4>Node</h4>
             <div class="percent">
               <div class="nodes70"></div>
@@ -249,10 +289,5 @@
     <!--BOOTSTRAP JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
-
-    <!--FOOTER-->
-    <footer class="text-center">
-      <p>© 2024 Todos los derechos reservados.</p>
-      </footer>
 
 </html>
