--- a/index.html
+++ b/index.html
@@ -18,7 +18,43 @@
   <body>
 
     <div class="container">
+
+
+
+      <!--left side-->
       <div class="left_side">
+
+        <div class="navbarContainer">
+          <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/index.html">
+                <img src="/assets/img/logo-og.png" alt="Logo OG">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#portfolio">Portfolio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#experiencia">Experiencia</a>
+                  </li>
+                  <li class="nav-item"></li>
+                    <a class="nav-link" href="#educacion">Educación</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+
+
+
         <div class="profileText">
           <div class="imgBx">
            <img class="photo" src="/assets/img/OG.png" alt="OscarGarin"></div>
@@ -57,7 +93,7 @@
         </div>
 
         <div class="ContactInfo education">
-        <h3 class="title">Educación</h3>
+        <h3 id="educacion" class="title">Educación</h3>
 
           <ul>
             <li>
@@ -139,7 +175,9 @@
       </div>
 
       <!--right side-->
+      <!-- Navbar -->
       <div class="right_side">
+        
         <div class="about">
           <h2 class="title2">Perfil</h2>
           <p>He liderado proyectos hasta los USD3.2M anuales (USD8.4M en total para 3 años), y he gestionando los mayores volúmenes de documentación de grandes proyectos de la Gran Minería (+20 millones de documentos y hasta USD10.000M).
@@ -147,7 +185,7 @@
         </div>
 
         <div class="about">
-          <h2 class="title2">Experiencia</h2>
+          <h2 id="experiencia" class="title2">Experiencia</h2>
           <div class="box">
             <div class="year_company">
               <h5>2023 - Manquehue</h5>
@@ -191,7 +229,7 @@
         </div>
 
         <div class="about portfolio">
-          <h2 class="title2">Portfolio</h2>
+          <h2 id="portfolio" class="title2">Portfolio</h2>
 
           <div class="card_container">
             <div class="card" style="width: 18rem;">
