--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
 
     <div class="container">
 
-
-
-      <!--left side-->
+      <!-- LEFT SIDE -->
       <div class="left_side">
 
+        <!-- Navbar -->
         <div class="navbarContainer">
           <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
@@ -172,15 +171,23 @@
           </ul>
         </div>
 
+        <!-- Footer -->
+        <div class="fixed-bottom bg-white text-center" style="border-top-right-radius: 10px; border-top-left-radius: 10px;">
+          <div class="row">
+            <div class="text-center">
+              &copy; Oscar Garin 2024 - Todos los derechos reservados.
+            </div>
+        </div>
+        </div>
+
       </div>
 
-      <!--right side-->
-      <!-- Navbar -->
+      <!-- RIGHT SIDE -->
       <div class="right_side">
         
         <div class="about">
           <h2 class="title2">Perfil</h2>
-          <p>He liderado proyectos hasta los USD3.2M anuales (USD8.4M en total para 3 años), y he gestionando los mayores volúmenes de documentación de grandes proyectos de la Gran Minería (+20 millones de documentos y hasta USD10.000M).
+          <p>He liderado proyectos hasta los USD3.2M anuales (USD8.4M en total para 3 años), y he gestionando volúmenes de documentación de mega proyectos de la Gran Minería (+20 millones de documentos y hasta USD10.000M).
             Agradecido de todas las experiencias laborales, he sido Consultor experto, Líder de Servicios y Sistemas de Información, Gerente de Tecnologías y Superintendente en Minería.</p>
         </div>
 
@@ -327,5 +334,7 @@
     <!--BOOTSTRAP JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
+
+
 
 </html>
