--- a/index.html
+++ b/index.html
@@ -196,11 +196,9 @@
           <h2 class="title2">Perfil</h2>
           <br>
           <p>
-            <span>Mejoro y automatizo procesos, gestiono el conocimiento de las empresas. </span>
+            <span>Gestiono el conocimiento de las empresas. </span>
             <br>
-            <span>He liderado proyectos, creando y gestionado presupuestos hasta los USD3.2M anuales (USD8.4M en total para 3 años), he migrado volúmenes de documentación de los mega proyectos más desafiantes de la Gran Minería (+20TB de espacio, +20 millones de documentos).</span>
-            <br>
-            <span>También me tocó convertir una empresa de reclutamiento en una consultora</span>
+            <span>He liderado proyectos, creando y gestionado presupuestos hasta los USD3.2M anuales (USD8.4M en total para 3 años). He migrado volúmenes de documentación de los mega proyectos más desafiantes de la Gran Minería (+20TB de espacio, +20 millones de documentos).</span>
             <br>
             <span>Consultor experto en sistemas de conocimiento y documentales (desde 1996), Líder de Servicios y Sistemas de Información, Gerente de Tecnologías y Superintendente en Minería.</span>
           </p>
