actualiza archivo readme

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </div>
             <div class="text">
               <h4>Superintendent Information & Doc Control</h4>
-              <p>Lider de las siguientes áreas:</p>
+              <p>Líder de las siguientes áreas:</p>
               <ul>
                 <li>Document Control</li>
                 <li>Record Management</li>
